Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-94558

The handle hovered state of RangeSlider is wrong when first and second overlapped

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.2.0 Beta3, 6.3.0 Alpha
    • 5.15, 6.0, 6.1
    • Quick: Controls 2
    • None
    • Ubuntu 19.04, deepin v20
    • All
    • 603c91f330b40ceab20272db16f3dbffa4edd0ec (qt/qtdeclarative/dev) 6a93a602e3dbad0afbd2b5bd760a73fded0a099d (qt/qtdeclarative/6.2)

      phenomenon:
      RangeSlider is set to Material or Universal style. When the first and second handle of RangeSlider overlap, click on the second handle and move, the first handle  state is hovered. see error.mp4

      In fact, the first handle shouldn't  be   hovered status, because first handle doesn't contains mouse  pos.

        1. qml-bar.zip
          2 kB
          kingderzhang
        2. error.mp4
          2.13 MB
          kingderzhang
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            kingderzhang kingderzhang
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes