RangeSlider: fix both handles being hovered

When both handles overlap, only the handle with
the higher Z value should be hovered.

Pick-to: 6.2 6.1 5.15
Fixes: QTBUG-94558
Done-with: Mitch Curtis <mitch.curtis@qt.io>
Change-Id: I6565e199ea77f3fae7a0d2dc84b36fa244bc7260
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>